tests/ui/rust-2018/uniform-paths/deadlock.stderr
error[E0463]: can't find crate for `bar`
  --> $DIR/deadlock.rs:4:5
   |
LL | use bar::foo;
   |     ^^^ can't find crate

error[E0432]: unresolved imports `bar::foo`, `foo::bar`
  --> $DIR/deadlock.rs:4:5
   |
LL | use bar::foo;
   |     ^^^^^^^^
LL | use foo::bar;
   |     ^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0463.
For more information about an error, try `rustc --explain E0432`.
